Add basic data visualization
Basic barplot based on data from the API.

--- a/client/index.html
+++ b/client/index.html
@@ -47,6 +47,6 @@
         </select>
         <button id="send_request">Submit</button>
     </div>
-    <p id="foo"></p>
+    <div id="dataviz"></div>
 </body>
 </html>
