Add input fileds to choose dates

--- a/client/index.html
+++ b/client/index.html
@@ -45,6 +45,8 @@
             <option value="ES">Spain</option>
             <option value="SE">Sweden</option>
         </select>
+        <input type="date" id="date_from"/>
+        <input type="date" id="date_to"/>
         <button id="send_request">Submit</button>
     </div>
     <div id="dataviz"></div>
