Add a bound to the minimum input date

--- a/client/index.html
+++ b/client/index.html
@@ -45,7 +45,7 @@
             <option value="ES">Spain</option>
             <option value="SE">Sweden</option>
         </select>
-        <input type="date" id="date_from"/>
+        <input type="date" id="date_from" min="2020-01-01"/>
         <input type="date" id="date_to"/>
         <button id="send_request">Submit</button>
     </div>
