Modify the barplot to be redrawn with new data
Instead of creating a brand new barplot next to the old one and keeping
them both on the page, now the old barplot is removed and a new one is
generated after every request.

--- a/client/index.html
+++ b/client/index.html
@@ -55,6 +55,8 @@
         <input type="date" id="date_to"/>
         <button id="send_request">Submit</button>
     </div>
-    <div id="dataviz"></div>
+    <div id="dataviz">
+        <svg width="460" height="400"></svg>
+    </div>
 </body>
 </html>
