Move the barplot svg's dimension definitions to css
This way the dimensions can be modified in a single place, so
referencing them will be easier.

--- a/client/index.html
+++ b/client/index.html
@@ -56,7 +56,7 @@
         <button id="send_request">Submit</button>
     </div>
     <div id="dataviz">
-        <svg width="460" height="400"></svg>
+        <svg></svg>
     </div>
 </body>
 </html>
