--- a/client/index.html
+++ b/client/index.html
@@ -13,7 +13,12 @@
         <p><span id="value"></span></p>
     </div>
 
-    <div>
+    <div id="category_selector_container">
+        <button id="category_selector_hospital" class="category_selector">Hospitals</button>
+        <button id="category_selector_tests" class="category_selector">Tests</button>
+    </div>
+
+    <div id="category_hospital" class="category_options">
         <select id="type_select">
             <option value="beds">Hospital admissions</option>
             <option value="icu">ICU admissions</option>
@@ -55,6 +60,56 @@
         <input type="date" id="date_to"/>
         <button id="send_request">Submit</button>
     </div>
+
+    <div id="category_tests" class="hidden category_options">
+        <select id="country_select_tests">
+            <!-- TODO somehow get rid of this duplication -->
+            <option value="AT">Austria</option>
+            <option value="BE">Belgium</option>
+            <option value="BG">Bulgaria</option>
+            <option value="HR">Croatia</option>
+            <option value="CY">Cyprus</option>
+            <option value="CZ">Czechia</option>
+            <option value="DK">Denmark</option>
+            <option value="EE">Estonia</option>
+            <option value="FI">Finland</option>
+            <option value="FR">France</option>
+            <option value="DE">Germany</option>
+            <option value="GR">Greece</option>
+            <option value="HU">Hungary</option>
+            <option value="IE">Ireland</option>
+            <option value="IT">Italy</option>
+            <option value="LV">Latvia</option>
+            <option value="LT">Lithuania</option>
+            <option value="LU">Luxembourg</option>
+            <option value="MT">Malta</option>
+            <option value="NL">Netherlands</option>
+            <option value="PL">Poland</option>
+            <option value="PT">Portugal</option>
+            <option value="RO">Romania</option>
+            <option value="SK">Slovakia</option>
+            <option value="SI">Slovenia</option>
+            <option value="ES">Spain</option>
+            <option value="SE">Sweden</option>
+        </select>
+        <select id="data_type">
+            <option value="new_cases">New cases</option>
+            <option value="tests_done">Tests done</option>
+            <option value="testing_rate">Testing rate</option>
+            <option value="positivity_rate">Positivity rate</option>
+        </select>
+        <select id="tests_year_select">
+            <option value="all">Overall</option>
+            <option value="2020">2020</option>
+            <option value="2021">2021</option>
+        </select>
+        <select id="tests_week_select">
+            <option value="whole_year">Whole year</option>
+            <!-- Populated by JS -->
+        </select>
+        <button id="send_request_tests">Submit</button>
+    </div>
+
     <div id="dataviz">
         <svg></svg>
     </div>
