Refactor `data_type` to `data_point`
The former was confusing.

--- a/client/index.html
+++ b/client/index.html
@@ -92,7 +92,7 @@
             <option value="ES">Spain</option>
             <option value="SE">Sweden</option>
         </select>
-        <select id="data_type">
+        <select id="data_point">
             <option value="new_cases">New cases</option>
             <option value="tests_done">Tests done</option>
             <option value="testing_rate">Testing rate</option>
