Add some styling to options for data visualization

--- a/client/index.html
+++ b/client/index.html
@@ -60,7 +60,8 @@
         </select>
         <input type="date" id="date_from" min="2020-01-01"/>
         <input type="date" id="date_to"/>
-        <button id="send_request">Submit</button>
+        <br>
+        <button id="send_request" class="submit_button">Submit</button>
     </div>
 
     <div id="category_tests" class="hidden category_options">
@@ -79,7 +80,8 @@
             <option value="whole_year">Whole year</option>
             <!-- Populated by JS -->
         </select>
-        <button id="send_request_tests">Submit</button>
+        <br>
+        <button id="send_request_tests" class="submit_button">Submit</button>
     </div>
 
     <div id="dataviz">
