Change button text
From "Submit" to "SHOW".

--- a/client/index.html
+++ b/client/index.html
@@ -61,7 +61,7 @@
         <input type="date" id="date_from" min="2020-01-01"/>
         <input type="date" id="date_to"/>
         <br>
-        <button id="send_request" class="submit_button">Submit</button>
+        <button id="send_request" class="submit_button">SHOW</button>
     </div>
 
     <div id="category_tests" class="hidden category_options">
@@ -81,7 +81,7 @@
             <!-- Populated by JS -->
         </select>
         <br>
-        <button id="send_request_tests" class="submit_button">Submit</button>
+        <button id="send_request_tests" class="submit_button">SHOW</button>
     </div>
 
     <div id="dataviz">
